<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guildLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guildLineEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guildLineBottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guildLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1">

    </androidx.constraintlayout.widget.Guideline>


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topAppBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:minHeight="80dp"
            android:pointerIcon="arrow"
            android:textAlignment="center"
            app:menu="@menu/top_app_bar"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/calculator_icon"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>



    </com.google.android.material.appbar.AppBarLayout>
  <!--  <TextView
            android:id="@+id/tvInput"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:paddingTop="30dp"
            android:layout_height="120dp"
            android:hint="Input"
            android:textAlignment="textEnd"
            android:textSize="40dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />-->

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:hint="|"
        android:paddingTop="30dp"
        android:textAlignment="textEnd"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/topAppBarLayout"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvOutput"
        app:layout_constraintTop_toBottomOf="@id/tvOutput"
        android:id="@+id/btnAc"
        android:text="@string/btnAC"
        style="@style/btnStyle1"
      >

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnAc"
        app:layout_constraintTop_toTopOf="@id/btnAc"
        android:id="@+id/btnClear"
        android:text="@string/btnClear"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle1">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnModulus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnModulus"
        android:layout_marginStart="@dimen/btn_margin_start"
        app:layout_constraintStart_toEndOf="@id/btnClear"
        app:layout_constraintTop_toTopOf="@id/btnClear"
        style="@style/btnStyle1">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDivide"
        android:layout_marginStart="@dimen/btn_margin_start"
        app:layout_constraintStart_toEndOf="@id/btnModulus"
        app:layout_constraintTop_toTopOf="@id/btnModulus"
        style="@style/btnStyle">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btnAc"
        app:layout_constraintTop_toBottomOf="@id/btnAc"
        android:id="@+id/btnSeven"
        android:layout_marginTop="15dp"
        android:text="@string/btnSeven"
        style="@style/btnStyle2">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintTop_toTopOf="@id/btnSeven"
        android:id="@+id/btnEight"
        android:layout_marginStart="@dimen/btn_margin_start"
        android:text="@string/btnEight"
        style="@style/btnStyle2">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNine"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle2"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintTop_toTopOf="@id/btnEight">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiply"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintTop_toTopOf="@id/btnNine">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/btnSeven"
        app:layout_constraintTop_toBottomOf="@id/btnSeven"
        android:id="@+id/btnFour"
        style="@style/btnStyle2"
        android:text="@string/btnFour">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintTop_toTopOf="@id/btnFour"
        android:id="@+id/btnFive"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle2"
        android:text="@string/btnFive">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSix"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle2"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintTop_toTopOf="@id/btnFive">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMinus"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintTop_toTopOf="@id/btnSix">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/btnFour"
        app:layout_constraintTop_toBottomOf="@id/btnFour"
        android:id="@+id/btnOne"
        style="@style/btnStyle2"
        android:text="@string/btnOne">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toTopOf="@id/btnOne"
        android:id="@+id/btnTwo"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle2"
        android:text="@string/btnTwo">


    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnThree"
        style="@style/btnStyle2"
        android:layout_marginStart="@dimen/btn_margin_start"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toTopOf="@id/btnTwo">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlus"
        style="@style/btnStyle"
        android:layout_marginStart="@dimen/btn_margin_start"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintTop_toTopOf="@id/btnThree">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btnOne"
        app:layout_constraintTop_toBottomOf="@id/btnOne"
        android:id="@+id/btnDoubleZero"
        style="@style/btnStyle2"
        android:text="@string/btnDoubleZero"
        android:layout_marginTop="15dp">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnDoubleZero"
        app:layout_constraintTop_toTopOf="@id/btnDoubleZero"
        android:id="@+id/btnZero"
        android:layout_marginStart="@dimen/btn_margin_start"
        android:text="@string/btnZero"
        style="@style/btnStyle2">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDot"
        style="@style/btnStyle2"
        android:layout_marginStart="@dimen/btn_margin_start"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toTopOf="@id/btnZero"
        >

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEqual"
        android:layout_marginStart="@dimen/btn_margin_start"
        style="@style/btnStyle"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toTopOf="@id/btnDot">
    </androidx.appcompat.widget.AppCompatButton>




</androidx.constraintlayout.widget.ConstraintLayout>